tests/cases/fail/pkg_missing_import.p4
import pkgdemo.math.missing

def main() -> None:
    print(1)
